--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7715583020214640"
      crossorigin="anonymous"></script>
     
+    <meta name="google-adsense-account" content="ca-pub-7715583020214640">
+    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
