--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2QS0T3HY9X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2QS0T3HY9X');
+    </script>
+
     <title>Color Spark - Gerador de Paletas de Cores Profissional</title>
     <meta name="description" content="Crie, salve e exporte paletas de cores perfeitas com o Color Spark. A ferramenta ideal para designers e desenvolvedores que buscam inspiração e produtividade.">
 
@@ -72,21 +81,7 @@
         <div class="content-wrapper">
             <h2>O Que é o Color Spark?</h2>
             <p>O Color Spark é uma ferramenta de geração de paletas de cores desenvolvida para designers, desenvolvedores e criadores de conteúdo. Nosso objetivo é simplificar o processo de encontrar combinações de cores harmoniosas e inspiradoras. Com apenas um clique, você pode gerar paletas únicas, explorar diferentes "moods" e salvar suas criações para usar em qualquer projeto.</p>
-
-            <h2>Como Usar Nossa Ferramenta</h2>
-            <p>Usar o Color Spark é fácil e intuitivo. Siga estes passos para tirar o máximo proveito da nossa ferramenta:</p>
-            <ul>
-                <li><strong>Gere Paletas Instantaneamente:</strong> Pressione o botão "Gerar Paleta" ou a barra de espaço para criar uma nova combinação de 5 cores.</li>
-                <li><strong>Explore por Moods:</strong> Use os botões de mood (Quente, Frio, Praia, etc.) para gerar paletas que se alinham com a emoção do seu projeto.</li>
-                <li><strong>Extraia Cores de Imagens:</strong> Clique em "Carregar Imagem" para fazer o upload de uma foto e extrair automaticamente as cores dominantes.</li>
-                <li><strong>Bloqueie Suas Cores Favoritas:</strong> Gostou de uma cor? Clique no ícone de cadeado para mantê-la fixa enquanto gera novas cores para as outras posições.</li>
-                <li><strong>Salve e Gerencie:</strong> Nomeie e salve suas paletas favoritas para acessá-las mais tarde. Elas ficam guardadas no seu navegador.</li>
-                <li><strong>Exporte com Facilidade:</strong> Exporte sua paleta final como variáveis CSS, um arquivo vetorial SVG ou uma imagem PNG para usar em qualquer lugar.</li>
-            </ul>
-
-            <h2>Dicas para Criar a Paleta Perfeita</h2>
-            <p>A teoria das cores é fundamental no design. Uma boa paleta pode definir o tom de um website, a identidade de uma marca ou o sucesso de uma campanha. Ao usar o Color Spark, pense no seu público e na mensagem que você quer transmitir. Cores quentes como vermelho e laranja podem evocar energia, enquanto cores frias como azul e verde transmitem calma e confiança. Não tenha medo de experimentar e salvar várias opções antes de decidir pela final.</p>
-        </div>
+            </div>
     </section>
 
     <footer class="site-footer">
